2013-03-10  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* term/x11.trm (X11_options): Fix compiler warning about excess
	argument to fprintf().

	* src/plot3d.c (eval_3dplots): Type-correct enum usage.

	* src/plot2d.c (eval_plots): Type-correct enum usage.

2013-03-09  Dima Kogan  <dima@secretsauce.net>

	* src/plot3d.c (refresh_3dbounds):  Partial axis ranges, e.g. [*:MAX] or
	[MIN:*] were not being handled correctly when refreshing volatile data.

	* src/plot2d.c (refresh_bounds) src/plot3d.c (refresh_3dbounds):
	Extend degenerate range when refreshing.

2013-03-03  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c:  Allow a 2 columns only variant of "with yerrorbars".
	x is taken from column 0, y from column 1, yerror from column 2.

2013-03-01  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (refresh_bounds):  Partial axis ranges, e.g. [*:MAX] or
	[MIN:*] were not being handled correctly when refreshing volatile data.

2013-02-24  Ethan A Merritt  <merritt@u.washington.edu>

	* term/aquaterm.trm:  Revert patch of 24-Apr-2012 because it breaks
	rgbimage with aquaterm 1.1.  Reversion confirmed to fix the problem
	by Alexander Hansen of Fink.
	Bug #1188

2013-02-21  Ethan A Merritt  <merritt@u.washington.edu>

	*  src/plot.c:  The old test for whether a session was interactive 
	assumed that everything on the command line was either an input file
	name or an x11 option parsed by X11_args. This broke because
	(1) X11 is no longer the only interactive terminal.
	(2) There are options that occupy space on the command line but are
	not file names.  Some indicate non-interactive; some don't.
	Replace this test with one that only enters a non-interactive session
	if there are command line arguments that do not begin with '-' 
	(filename) or _do_ begin with '-e' (inline command).
	(Back-ported file plot.c from version 4.7)
	Bug #1212

2013-02-19  Ethan A Merritt  <merritt@u.washington.edu>
